src/objects/Employee_Production__c.object
<CustomObject>
    <fields>
        <fullName>ACATs__c</fullName>
        <label>ACATs</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Out_YTD__c</fullName>
        <label>Asset Out YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Asset_Rank_Number__c</fullName>
        <label>Asset Rank Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Asset_Rank_Out_Of__c</fullName>
        <label>Asset Rank Out Of</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Asset_Rank__c</fullName>
        <formula>TEXT(Asset_Rank_Number__c) &amp; &quot; &quot; &amp; &quot;out of&quot; &amp; &quot; &quot; &amp; TEXT( Asset_Rank_Out_Of__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Rank</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_in_YTD__c</fullName>
        <label>Asset in YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Avg_Ticket_Size__c</fullName>
        <label>Avg Ticket Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CCNA_MTD__c</fullName>
        <label>CCNA MTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCNA_QTD__c</fullName>
        <label>CCNA QTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCNA_YTD__c</fullName>
        <label>CCNA YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Employee ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Employee_No__c</fullName>
        <label>Employee Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>Employees__c</referenceTo>
        <relationshipLabel>Employee Production</relationshipLabel>
        <relationshipName>Employee_Production</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Quarter_End_T_12_Production__c</fullName>
        <label>Last Quarter End T 12 Production</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MTD_Production_Goal__c</fullName>
        <label>MTD Production Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MTD_Production_Pct_of_Goal__c</fullName>
        <label>MTD Production Pct of Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MTD_Production__c</fullName>
        <label>MTD Production</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MTD_Rank_Number__c</fullName>
        <label>MTD Rank Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MTD_Rank_Out_Of__c</fullName>
        <label>MTD Rank Out Of</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NCNA_MTD__c</fullName>
        <label>NCNA MTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NCNA_QTD__c</fullName>
        <label>NCNA QTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NCNA_YTD__c</fullName>
        <label>NCNA YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Assets_Goal__c</fullName>
        <label>Net Assets Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Assets_YTD__c</fullName>
        <label>Net Assets YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Assets_of_Goal__c</fullName>
        <formula>(Net_Assets_YTD__c)/(Net_Assets_Goal__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Assets of Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>New_Accounts_MTD__c</fullName>
        <label>New Account MTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Accounts_QTD__c</fullName>
        <label>New Accounts QTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Accounts_YTD__c</fullName>
        <label>New Accounts YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Year_YTD_Production__c</fullName>
        <label>Previous Year YTD Production</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>QTD_Production_Goal__c</fullName>
        <label>QTD Production Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>QTD_Production_Pct_of_Goal__c</fullName>
        <label>QTD Production Pct of Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>QTD_Production__c</fullName>
        <label>QTD Production</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ROA__c</fullName>
        <label>ROA Pct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rank_Number__c</fullName>
        <label>Rank Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rank_Out_Of__c</fullName>
        <label>Rank Out Of</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <formula>TEXT(Rank_Number__c) &amp; &quot; &quot; &amp; &quot;out of&quot; &amp; &quot; &quot; &amp; TEXT( Rank_Out_Of__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rank</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_12_Production__c</fullName>
        <label>T 12 Production</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ticket_Count__c</fullName>
        <label>Ticket Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Accounts__c</fullName>
        <label>Total Accounts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Current_Assets__c</fullName>
        <label>Total Current Assets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YOY_Difference_Pct__c</fullName>
        <label>YOY Difference Pct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>YOY_Difference__c</fullName>
        <label>YOY Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTD_Production_Goal__c</fullName>
        <label>YTD Production Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTD_Production_Pct_of_Goal__c</fullName>
        <label>YTD Production Pct of Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>YTD_Production__c</fullName>
        <label>YTD Production</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTD_Rank_Number__c</fullName>
        <label>YTD Rank Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Rank_Out_Of__c</fullName>
        <label>YTD Rank Out Of</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Rank__c</fullName>
        <formula>TEXT(YTD_Rank_Number__c) &amp; &quot; &quot; &amp; &quot;out of&quot; &amp; &quot; &quot; &amp; TEXT( YTD_Rank_Out_Of__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YTD Rank</label>
        <type>Text</type>
    </fields>
    <label>Employee Production</label>
    <nameField>
        <label>Employee Production Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee Production</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>